Got it (mostly) working end-to-end via a nuget package (as long as you add in the RazorLight reference yourself

--- a/MSBuildRazorCompiler/CompileRazorFiles.targets
+++ b/MSBuildRazorCompiler/CompileRazorFiles.targets
@@ -6,7 +6,7 @@
     <MsBuildRazorCompilerRootNamespace>$(RootNamespace)</MsBuildRazorCompilerRootNamespace>
   </PropertyGroup>
 
-  <Target Name="CompileRazorFiles" BeforeTargets="Build">
-    <Exec Command="$(MSBuildRazorCompilerExe) ""$(MsBuildRazorCompilerPath)"" $(RootNamespace)" />
+  <Target Name="CompileRazorFiles" BeforeTargets="CoreCompile">
+    <Exec Command="$(MSBuildRazorCompilerExe) &quot;$(MsBuildRazorCompilerPath)&quot; $(RootNamespace)" />
   </Target>
 </Project>
