--- a/MSBuildRazorCompiler/CompileRazorFiles.targets
+++ b/MSBuildRazorCompiler/CompileRazorFiles.targets
@@ -9,6 +9,11 @@
 
   <Target Name="CompileRazorFiles" BeforeTargets="CoreCompile">
     <Exec Command="$(MSBuildRazorCompilerExe) &quot;$(MsBuildRazorCompilerPath)&quot; $(RootNamespace)" />
+    <!-- We need to re-scan included source files in case this build has generated new ones https://stackoverflow.com/a/44829863 -->
+    <ItemGroup>
+      <Compile Include="**/*$(DefaultLanguageSourceExtension)"
+               Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder);$(BaseIntermediateOutputPath)**;$(BaseOutputPath)**;@(Compile)" />
+    </ItemGroup>
   </Target>
 
   <Target Name="CleanCompiledRazorFiles" BeforeTargets="CoreClean">
