--- a/MSBuildRazorCompiler/MsBuildRazorCompiler.nuspec
+++ b/MSBuildRazorCompiler/MsBuildRazorCompiler.nuspec
@@ -9,6 +9,8 @@
       <group targetFramework=".NETCoreApp3.1">
         <dependency id="RazorLight" version="2.0.0-beta7" />
         <dependency id="ILRepack.MSBuild.Task" version="2.0.13" />
+        <dependency id="Microsoft.AspNetCore.Mvc.Razor.Extensions" version="3.1.3" />
+        <dependency id="Microsoft.AspNetCore.Razor.Language" version="3.1.3" />
       </group>
     </dependencies>
   </metadata>
